--- a/components/header.module.css
+++ b/components/header.module.css
@@ -6,6 +6,7 @@
   height: var(--header-height);
   background: linear-gradient(118.55deg, #3a3897 3.23%, #4a90e2 97.65%);
   box-shadow: 0 1px 5px 0 rgba(0 0 0 / 30%);
+  z-index: 100;
 }
 
 .header nav {
