--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -1,13 +1,12 @@
 .sidenav {
-  border-left: 1px solid #dbdbdb;
+  border-right: 1px solid #dbdbdb;
   font-size: 0.97em;
   min-height: 100vh;
   padding: 1rem;
-  background-color: #e9e9e9;
 }
 
 .sidenav ul {
-  position: fixed;
+  /* position: fixed; */
   padding: 0;
   margin: 0;
   list-style: none;
