--- a/pages/docs/[id].module.css
+++ b/pages/docs/[id].module.css
@@ -5,4 +5,6 @@
 .article {
   flex: 0 1 calc(100% - 9rem);
   padding: 0 2rem;
+  height: calc(100vh - var(--header-height));
+  overflow-y: auto;
 }
