--- a/components/globals.css
+++ b/components/globals.css
@@ -1,6 +1,8 @@
 :root {
   --header-height: 2.5rem;
   --main-width: 70rem;
+  --link-color: rgb(90, 75, 68);
+  --link-active-color: rgb(182, 66, 20);
 }
 
 html,
