--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -10,6 +10,10 @@
   list-style: none;
 }
 
-.sidenav a {
-  color: #444;
+.link {
+  color: var(--link-color);
+}
+
+.activeLink {
+  color: var(--link-active-color);
 }
