--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -4,16 +4,20 @@
   padding: 1rem;
 }
 
-.sidenav ul {
+.sidenav > ul {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+.sidenav li li {
+  margin: 0;
 }
 
 .link {
   color: var(--link-color);
 }
 
-.activeLink {
+.active {
   color: var(--link-active-color);
 }
