--- a/components/globals.css
+++ b/components/globals.css
@@ -47,5 +47,46 @@ li {
 }
 
 hr {
-  margin-bottom: 2.5rem;
+  margin: 1.8rem 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+th {
+  border-width: 0 1px 1px;
+  border-style: solid;
+  border-color: rgba(120, 120, 120, 0.3);
+  font-weight: 400;
+}
+
+tr {
+  background: #fff;
+}
+
+th,
+td {
+  padding: 0.4rem;
+}
+
+tbody tr {
+  border: 1px solid rgba(184, 196, 194, 0.3);
+}
+tbody tr:nth-child(odd) {
+  background: #f6f8fa;
+}
+
+code {
+  font-family: 'Source Code Pro', Menlo, monospace;
+  font-size: 0.85rem;
+  letter-spacing: 0;
+}
+
+td > code {
+  border: 1px solid rgba(184, 196, 194, 0.5);
+  border-radius: 3px;
+  padding: 0.1rem;
 }
