--- a/components/header.module.css
+++ b/components/header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: var(--header-height);
-  background: linear-gradient(118.55deg, #3a3897 3.23%, #4a90e2 97.65%);
+  background: var(--header-bg);
   box-shadow: 0 1px 5px 0 rgba(0 0 0 / 30%);
   z-index: 100;
 }
@@ -15,7 +15,7 @@
   margin: 0 auto;
 }
 
-.header nav a {
+.header nav > * {
   padding: 0.4rem;
   color: #dce9f9;
   display: flex;
