feat: switch theme colors with a transition

--- a/components/globals.css
+++ b/components/globals.css
@@ -50,7 +50,7 @@ body {
 body.light-theme {
   transition-property: color, background-color;
   transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition-timing-function: ease-in-out;
 }
 
 body.dark-theme {
@@ -64,7 +64,7 @@ body.dark-theme {
 
   transition-property: color, background-color;
   transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+  transition-timing-function: ease-in-out;
 }
 
 @media (prefers-color-scheme: dark) {
