--- a/components/themeSwitch.module.css
+++ b/components/themeSwitch.module.css
@@ -21,7 +21,8 @@
   position: absolute;
   right: 0;
   top: 0;
-  transition: 0.3s;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
   border-radius: 28px;
 }
 
@@ -32,7 +33,8 @@
   height: 20px;
   left: 4px;
   position: absolute;
-  transition: 0.2s;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
   width: 20px;
   border-radius: 50%;
 }
