--- a/components/themeSwitch.module.css
+++ b/components/themeSwitch.module.css
@@ -24,6 +24,7 @@
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   border-radius: 28px;
+  box-shadow: 1px 0 1px rgba(255, 255, 255, 0.5);
 }
 
 .themeSwitchSlider:before {
