feat: switch theme colors with a transition

--- a/components/globals.css
+++ b/components/globals.css
@@ -8,7 +8,7 @@
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, rgb(33, 108, 158) 97.65%);
 
   --dark-bg: rgb(30, 30, 40);
-  --dark-color: #cacaca;
+  --dark-color: #d1d1d1;
   --dark-link-color: rgb(66, 143, 75);
   --dark-link-active-color: rgb(62, 190, 77);
   --dark-header-bg: linear-gradient(118.55deg, #201e53 3.23%, #102842 97.65%);
