--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -1,5 +1,6 @@
 .sidenav {
   border-right: 1px solid #dbdbdb;
+  background-color: var(--sidenav-bg);
   font-size: 0.97em;
   padding: 1rem;
   overflow-y: auto;
