--- a/components/globals.css
+++ b/components/globals.css
@@ -11,8 +11,8 @@
   --dark-bg: rgb(20, 20, 25);
   --dark-color: #d0d0d0;
   --dark-sidenav-bg: rgb(32, 32, 41);
-  --dark-link-color: #c09d01;
-  --dark-link-active-color: #f3c704;
+  --dark-link-color: #b89601;
+  --dark-link-active-color: rgb(228, 186, 0);
   --dark-header-bg: linear-gradient(118.55deg, #201e53 3.23%, #102842 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
