--- a/components/globals.css
+++ b/components/globals.css
@@ -11,8 +11,8 @@
   --dark-bg: rgb(20, 20, 25);
   --dark-color: #d3d3d3;
   --dark-sidenav-bg: rgb(30, 30, 35);
-  --dark-link-color: #ad8e00;
-  --dark-link-active-color: rgb(200, 180, 0);
+  --dark-link-color: #955f20;
+  --dark-link-active-color: #804000;
   --dark-header-bg: linear-gradient(118.55deg, #201e53 3.23%, #102842 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
