--- a/components/globals.css
+++ b/components/globals.css
@@ -8,9 +8,9 @@
   --light-tr-odd-bg: #f6f8fa;
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, rgb(33, 108, 158) 97.65%);
 
-  --dark-bg: rgb(20, 20, 25);
+  --dark-bg: #111;
   --dark-color: #d3d3d3;
-  --dark-sidenav-bg: rgb(30, 30, 35);
+  --dark-sidenav-bg: rgb(15, 15, 20);
   --dark-link-color: #955f20;
   --dark-link-active-color: #804000;
   --dark-header-bg: linear-gradient(118.55deg, #201e53 3.23%, #102842 97.65%);
