--- a/components/globals.css
+++ b/components/globals.css
@@ -6,14 +6,14 @@
   --light-link-active-color: #14415f;
   --light-tr-bg: #fff;
   --light-tr-odd-bg: #f6f8fa;
-  --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, rgb(33, 108, 158) 97.65%);
+  --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, #007acc 97.65%);
 
   --dark-bg: #111;
   --dark-color: #d3d3d3;
   --dark-sidenav-bg: rgb(15, 15, 20);
   --dark-link-color: #955f20;
   --dark-link-active-color: #804000;
-  --dark-header-bg: linear-gradient(118.55deg, #201e53 3.23%, #102842 97.65%);
+  --dark-header-bg: linear-gradient(118.55deg, #161541 3.23%, #102842 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
 
