--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -1,5 +1,5 @@
 .sidenav {
-  box-shadow: 1px 0px 1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 0px 1px rgba(0, 0, 0, 0.1);
   background-color: var(--sidenav-bg);
   font-size: 0.97em;
   padding: 1rem;
