--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -1,6 +1,6 @@
 .sidenav {
   box-shadow: 1px 0px 1px rgba(0, 0, 0, 0.1);
-  background-color: var(--sidenav-bg);
+  background-color: rgb(20, 25, 29);
   font-size: 0.97em;
   padding: 1rem;
   overflow-y: auto;
