--- a/components/globals.css
+++ b/components/globals.css
@@ -10,7 +10,7 @@
 
   --dark-bg: #111115;
   --dark-color: #d3d3d3;
-  --dark-sidenav-bg: #121218;
+  --dark-sidenav-bg: rgb(20, 25, 29);
   --dark-link-color: #955f20;
   --dark-link-active-color: #894000;
   --dark-header-bg: linear-gradient(118.55deg, #161541 3.23%, #102842 97.65%);
