docs: update docs

--- a/components/globals.css
+++ b/components/globals.css
@@ -9,7 +9,7 @@
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, #007acc 97.65%);
 
   --dark-bg: #111115;
-  --dark-color: #d3d3d3;
+  --dark-color: #ccc;
   --dark-sidenav-bg: rgb(20, 25, 29);
   --dark-link-color: #955f20;
   --dark-link-active-color: #894000;
