--- a/components/header.module.css
+++ b/components/header.module.css
@@ -7,6 +7,7 @@
   background: var(--header-bg);
   box-shadow: 0 1px 5px 0 rgba(0 0 0 / 30%);
   z-index: 100;
+  padding: 0 1rem;
 }
 
 .header nav {
@@ -16,7 +17,8 @@
 }
 
 .header nav > * {
-  padding: 0.4rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
   color: #dce9f9;
   display: flex;
   gap: 0.5rem;
