--- a/pages/docs/[id].module.css
+++ b/pages/docs/[id].module.css
@@ -7,11 +7,12 @@
 }
 
 .article {
-  flex: 0 1 calc(100% - 9rem);
-  padding: 0 1rem;
+  flex: 0 1 100%;
+  padding: 0 var(--side-padding);
+  overflow-x: hidden;
 }
 
-@media only screen and (max-width: 1240px) {
+@media only screen and (max-width: 980px) {
   .sidenav {
     position: unset;
     top: unset;
