docs: improve examples

--- a/components/globals.css
+++ b/components/globals.css
@@ -13,7 +13,7 @@
   --dark-sidenav-bg: rgb(18, 23, 28);
   --dark-link-color: #955f20;
   --dark-link-active-color: #894000;
-  --dark-header-bg: linear-gradient(118.55deg, #0b2e46 3.23%, #003559 97.65%);
+  --dark-header-bg: linear-gradient(118.55deg, #0a2a3f 3.23%, #013354 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
 
