--- a/components/globals.css
+++ b/components/globals.css
@@ -9,7 +9,7 @@
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, #007acc 97.65%);
 
   --dark-bg: #111119;
-  --dark-color: #ddd;
+  --dark-color: #cfcfcf;
   --dark-sidenav-bg: rgb(18, 23, 28);
   --dark-link-color: #955f20;
   --dark-link-active-color: #894000;
