--- a/components/globals.css
+++ b/components/globals.css
@@ -9,10 +9,10 @@
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, #007acc 97.65%);
 
   --dark-bg: #111119;
-  --dark-color: #cfcfcf;
+  --dark-color: #dcdcdc;
   --dark-sidenav-bg: rgb(18, 23, 28);
-  --dark-link-color: #955f20;
-  --dark-link-active-color: #894000;
+  --dark-link-color: #b08731;
+  --dark-link-active-color: #d5aa4e;
   --dark-header-bg: linear-gradient(118.55deg, #0a2a3f 3.23%, #013354 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
