--- a/components/globals.css
+++ b/components/globals.css
@@ -3,7 +3,7 @@
   --light-sidenav-bg: #eceeee;
   --light-color: #1b262c;
   --light-link-color: #3282b8;
-  --light-link-active-color: #14415f;
+  --light-link-active-color: #0f3854;
   --light-tr-bg: #fff;
   --light-tr-odd-bg: #f6f8fa;
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, #007acc 97.65%);
@@ -11,8 +11,8 @@
   --dark-bg: #111119;
   --dark-color: #dcdcdc;
   --dark-sidenav-bg: rgb(18, 23, 28);
-  --dark-link-color: #b08731;
-  --dark-link-active-color: #d5aa4e;
+  --dark-link-color: #a75c00;
+  --dark-link-active-color: #bd9234;
   --dark-header-bg: linear-gradient(118.55deg, #0a2a3f 3.23%, #013354 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
