--- a/components/globals.css
+++ b/components/globals.css
@@ -8,9 +8,9 @@
   --light-tr-odd-bg: #f6f8fa;
   --light-header-bg: linear-gradient(118.55deg, #135c8d 3.23%, #007acc 97.65%);
 
-  --dark-bg: #111119;
+  --dark-bg: #050F18;
   --dark-color: #dcdcdc;
-  --dark-sidenav-bg: rgb(18, 23, 28);
+  --dark-sidenav-bg: #0a1b28;
   --dark-link-color: #a75c00;
   --dark-link-active-color: #bd9234;
   --dark-header-bg: linear-gradient(118.55deg, #0a2a3f 3.23%, #013354 97.65%);
