--- a/components/globals.css
+++ b/components/globals.css
@@ -10,7 +10,7 @@
 
   --dark-bg: #050F18;
   --dark-color: #dcdcdc;
-  --dark-sidenav-bg: #0a1b28;
+  --dark-sidenav-bg: #08151f;
   --dark-link-color: #a75c00;
   --dark-link-active-color: #bd9234;
   --dark-header-bg: linear-gradient(118.55deg, #0a2a3f 3.23%, #013354 97.65%);
