--- a/components/globals.css
+++ b/components/globals.css
@@ -10,10 +10,10 @@
 
   --dark-bg: #050F18;
   --dark-color: #dcdcdc;
-  --dark-sidenav-bg: #08151f;
+  --dark-sidenav-bg: #07131c;
   --dark-link-color: #a75c00;
   --dark-link-active-color: #bd9234;
-  --dark-header-bg: linear-gradient(118.55deg, #0a2a3f 3.23%, #013354 97.65%);
+  --dark-header-bg: linear-gradient(118.55deg, #092537 3.23%, #00253e 97.65%);
   --dark-tr-bg: #3d4a55;
   --dark-tr-odd-bg: #48525f;
 
