--- a/components/themeSwitch.module.css
+++ b/components/themeSwitch.module.css
@@ -24,7 +24,7 @@
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   border-radius: 28px;
-  box-shadow: 1px 0 1px rgba(200, 200, 200, 0.5);
+  box-shadow: 1px 0 2px 0 rgba(150, 150, 150, 0.5);
 }
 
 .themeSwitchSlider:before {
@@ -41,7 +41,7 @@
 }
 
 .themeSwitchWrapper input:checked + .themeSwitchSlider {
-  background: #222;
+  background: #000;
 }
 
 .themeSwitchWrapper input:checked + .themeSwitchSlider:before {
