--- a/components/header.module.css
+++ b/components/header.module.css
@@ -21,7 +21,11 @@
   display: flex;
   gap: 0.5rem;
 }
+.header nav a {
+  margin-left: 1rem;
+}
 .header nav a:first-of-type {
+  margin-left: 0;
   flex: 1 0 auto;
   font-family: Consolas, Source Code Pro, Courier New, monospace;
   font-size: 1.1rem;
@@ -29,6 +33,3 @@
   text-decoration: none;
 }
 
-.header nav a:last-of-type {
-  margin-left: 1rem;
-}
