--- a/components/header.module.css
+++ b/components/header.module.css
@@ -10,26 +10,85 @@
   padding: 0 var(--side-padding);
 }
 
-.header nav {
+.nav {
   display: flex;
+  align-items: center;
 }
 
-.header nav > * {
+.nav > * {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
   color: #dce9f9;
-  display: flex;
-  gap: 0.5rem;
 }
-.header nav a {
-  margin-left: 1rem;
-}
-.header nav a:first-of-type {
-  margin-left: 0;
-  flex: 1 0 auto;
+
+.logo {
+  margin-left: 0;  
+  gap: 0.3rem;
   font-family: Consolas, Source Code Pro, Courier New, monospace;
   font-size: 1.1rem;
   font-weight: 400;
   text-decoration: none;
 }
 
+.hamburguer {
+  display: none;
+  margin-left: 5.0rem;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  transition: opacity var(--transition-duration--fast) ease-in-out;
+}
+.hamburguer:hover {
+  opacity: 0.8;
+  transition: opacity var(--transition-duration--fast) ease-in-out;
+}
+
+.bar {
+  display: block;
+  width: 1.6rem;
+  height: 3px;
+  margin: 0.3rem auto;
+  transition: all var(--transition-duration) ease-in-out;  
+  background-color: #dce9f9; 
+}
+
+.themeToggler {    
+  margin-left: auto;
+  opacity: 0.8;
+  transition: opacity var(--transition-duration--fast) ease-in-out;
+}
+.themeToggler:hover {
+  opacity: 1.0;
+  transition: opacity var(--transition-duration--fast) ease-in-out;
+}
+
+.themeToggler input {
+  display: none;
+}
+
+.themeTogglerSwitcher {  
+  display: inline-block;
+  height: 22px;
+  width: 22px;
+  cursor: pointer;  
+  transition: background-image var(--transition-duration) ease-in-out;
+}
+
+.themeToggler input + .themeTogglerSwitcher {
+  background-image: url('/sun.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.themeToggler input:checked + .themeTogglerSwitcher {
+  background-image: url('/moon.svg');
+}
+
+@media only screen and (max-width: 960px) {
+  .hamburguer {
+    display: inline-block;
+  }
+}
