--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -4,10 +4,9 @@
   top: var(--top);
   height: calc(100vh - var(--top));
   padding: 1rem 1rem 1rem var(--side-padding);
-  font-size: 0.97em;
+  font-weight: 500;
   background-color: var(--sidenav-bg);
   box-shadow: 1px 0px 1px rgba(48, 54, 61, 0.1);
-  transition: left var(--transition-duration) ease-in-out; 
 }
 
 .sidenav ul {
@@ -32,14 +31,15 @@
 }
 
 .sidenav.open {
-  left: 0;
+  transform: translateX(0);
+  transition: transform var(--transition-duration) ease-in-out; 
 }
 
 @media only screen and (max-width: 960px) {
   .sidenav {
     position: absolute;   
     top: 0;
-    left: -100%;
-    transition: left var(--transition-duration) ease-in-out; 
+    transform: translateX(-100%);
+    transition: transform var(--transition-duration) ease-in-out; 
   }
 }
