--- a/components/sidenav.module.css
+++ b/components/sidenav.module.css
@@ -7,6 +7,7 @@
   font-weight: 500;
   background-color: var(--sidenav-bg);
   box-shadow: 1px 0px 1px rgba(48, 54, 61, 0.1);
+  transition: transform var(--transition-duration) ease-in-out; 
 }
 
 .sidenav ul {
