--- a/components/header.module.css
+++ b/components/header.module.css
@@ -2,12 +2,14 @@
   position: fixed;
   top: 0;
   left: 0;
+  padding: 0 var(--side-padding);
+  margin: 0 auto;
   width: 100%;
+  max-width: var(--max-width);
   height: var(--header-height);
   background: var(--header-bg);
   box-shadow: 0 1px 5px 0 rgba(0 0 0 / 30%);
   z-index: 100;
-  padding: 0 var(--side-padding);
 }
 
 .nav {
