--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,5 +1,7 @@
 .main {
   position: relative;
   display: flex;
+  margin: 0 auto;
   margin-top: var(--header-height);
+  max-width: var(--max-width);
 }
