layout and docs

--- a/components/globals.css
+++ b/components/globals.css
@@ -10,7 +10,7 @@
 
   --dark-color: #E4D9F9;
   --dark-bg: #14224E;
-  --dark-sidenav-bg: #14224E;
+  --dark-sidenav-bg: #0f193a;
   --dark-link-color: #a75c00;
   --dark-link-color--active: #bd9234;
   --dark-header-bg: #081541;
