layout and docs

--- a/components/globals.css
+++ b/components/globals.css
@@ -11,8 +11,8 @@
   --dark-color: #E4D9F9;
   --dark-bg: #14224E;
   --dark-sidenav-bg: #0f193a;
-  --dark-link-color: #a75c00;
-  --dark-link-color--active: #bd9234;
+  --dark-link-color: #a9822d;
+  --dark-link-color--active: #daaa42;
   --dark-header-bg: #081541;
   --dark-tr-bg: #3d4a55;
   --dark-tr-bg--odd: #6e7988;
