docs: correct typo in url

--- a/components/globals.css
+++ b/components/globals.css
@@ -12,7 +12,7 @@
   --dark-bg: #14224E;
   --dark-sidenav-bg: #0f193a;
   --dark-link-color: #a9822d;
-  --dark-link-color--active: #dab942;
+  --dark-link-color--active: #dac842;
   --dark-header-bg: #081541;
   --dark-tr-bg: #3d4a55;
   --dark-tr-bg--odd: #6e7988;
